@@ -1,3 +1,9 @@
+2000-06-27  Richard Frith-Macdonald <rfm@gnu.org>
+
+	* Source/NSPort.m: Add default support for coding using the
+	encodePortObject and decodePortObject methods.
+	* Source/NSData.m: Use encodeDataObject and decodeDataObject
+
 2000-06-26  Adam Fedor  <fedor@gnu.org>
 
 	* Source/NSTimer.m (-invalidate): Remove assertion.
